SERVER-25569 Must hold mutex when iterating through ViewCatalog

Replaces ViewCatalog::begin()/::end() with a thread-safe iterate() method.